# backend/docs/swagger.yaml
@@ -1,5 +1,5 @@
 definitions:
-  handlers.NewBooking:
+  handlers.BookingRequest:
     properties:
       service_id:
         description: ServiceID is the ID of the service requested.
@@ -12,7 +12,7 @@ definitions:
     - service_id
     - slot_id
     type: object
-  handlers.NewItem:
+  handlers.ItemRequest:
     properties:
       product_id:
         description: ProductID is the id of the product the item represents.
@@ -24,136 +24,7 @@ definitions:
     - product_id
     - quantity
     type: object
-  handlers.NewOrder:
-    properties:
-      delivery_method:
-        description: |-
-          DeliveryMethod is the method in which the order should be deliver.
-
-          Allowed values are `pickup`, `delivery`.
-        type: string
-    required:
-    - delivery_method
-    type: object
-  handlers.NewProduct:
-    properties:
-      category:
-        maxLength: 45
-        minLength: 3
-        type: string
-      description:
-        maxLength: 1024
-        minLength: 3
-        type: string
-      image_url:
-        maxLength: 255
-        minLength: 3
-        type: string
-      name:
-        maxLength: 45
-        minLength: 3
-        type: string
-      price:
-        type: number
-      stock:
-        type: integer
-    required:
-    - category
-    - description
-    - image_url
-    - name
-    - price
-    - stock
-    type: object
-  handlers.NewService:
-    properties:
-      available:
-        description: Available says whether the service is available or not.
-        type: boolean
-      description:
-        description: Description is a brief description of the service.
-        maxLength: 1024
-        minLength: 5
-        type: string
-      name:
-        description: Name is the name of the service.
-        maxLength: 45
-        minLength: 3
-        type: string
-      price:
-        description: Price is the cost of the service.
-        type: number
-    required:
-    - available
-    - description
-    - name
-    - price
-    type: object
-  handlers.NewSlot:
-    properties:
-      date_string:
-        description: DateString is the date as a string. Format `Wednesday, 06 Jan
-          1999`
-        type: string
-      is_free:
-        description: IsFree is a boolean that says if the slot is free or not.
-        type: boolean
-      time_string:
-        description: TimeString is the time as a string. Format `04:00 AM`
-        type: string
-    required:
-    - date_string
-    - is_free
-    - time_string
-    type: object
-  handlers.PostEmail:
-    properties:
-      email:
-        maxLength: 45
-        minLength: 5
-        type: string
-    required:
-    - email
-    type: object
-  handlers.ResetPassword:
-    properties:
-      email:
-        maxLength: 45
-        minLength: 5
-        type: string
-      new_password:
-        maxLength: 45
-        minLength: 8
-        type: string
-      repeat_new_password:
-        maxLength: 45
-        minLength: 8
-        type: string
-      reset_token:
-        type: string
-    required:
-    - email
-    - new_password
-    - repeat_new_password
-    - reset_token
-    type: object
-  handlers.SignInUser:
-    properties:
-      email:
-        description: Email is the user's email.
-        maxLength: 45
-        minLength: 3
-        type: string
-      password:
-        description: Password is the user's password.
-        maxLength: 45
-        minLength: 8
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  handlers.SignUpUser:
+  handlers.NewUserDetails:
     properties:
       address:
         maxLength: 255
@@ -192,6 +63,124 @@ definitions:
     - phone
     - repeat_password
     type: object
+  handlers.OrderRequest:
+    properties:
+      delivery_method:
+        description: |-
+          DeliveryMethod specifies the method in which the order should be delivered.
+
+          Allowed values are `pickup`, `delivery`.
+        maxLength: 45
+        type: string
+      shipping_address:
+        description: ShippingAddress specifies the delivery address if DeliveryMethod
+          is `delivery`.
+        type: string
+    required:
+    - delivery_method
+    type: object
+  handlers.PostEmail:
+    properties:
+      email:
+        maxLength: 45
+        minLength: 5
+        type: string
+    required:
+    - email
+    type: object
+  handlers.ProductRequest:
+    properties:
+      category:
+        maxLength: 45
+        minLength: 3
+        type: string
+      description:
+        maxLength: 1024
+        minLength: 3
+        type: string
+      image_url:
+        maxLength: 255
+        minLength: 3
+        type: string
+      name:
+        maxLength: 45
+        minLength: 3
+        type: string
+      price:
+        type: number
+      stock:
+        type: integer
+    required:
+    - category
+    - description
+    - image_url
+    - name
+    - price
+    - stock
+    type: object
+  handlers.ResetPasswordRequest:
+    properties:
+      email:
+        maxLength: 45
+        minLength: 5
+        type: string
+      new_password:
+        maxLength: 45
+        minLength: 8
+        type: string
+      repeat_new_password:
+        maxLength: 45
+        minLength: 8
+        type: string
+      reset_token:
+        type: string
+    required:
+    - email
+    - new_password
+    - repeat_new_password
+    - reset_token
+    type: object
+  handlers.ServiceRequest:
+    properties:
+      available:
+        description: Available says whether the service is available or not.
+        type: boolean
+      description:
+        description: Description is a brief description of the service.
+        maxLength: 1024
+        minLength: 5
+        type: string
+      name:
+        description: Name is the name of the service.
+        maxLength: 45
+        minLength: 3
+        type: string
+      price:
+        description: Price is the cost of the service.
+        type: number
+    required:
+    - available
+    - description
+    - name
+    - price
+    type: object
+  handlers.SlotDetails:
+    properties:
+      date_string:
+        description: DateString is the date as a string. Format `Wednesday, 06 Jan
+          1999`
+        type: string
+      is_free:
+        description: IsFree is a boolean that says if the slot is free or not.
+        type: boolean
+      time_string:
+        description: TimeString is the time as a string. Format `04:00 AM`
+        type: string
+    required:
+    - date_string
+    - is_free
+    - time_string
+    type: object
   handlers.UpdateUser:
     properties:
       address:
@@ -217,6 +206,20 @@ definitions:
     - first_name
     - last_name
     - phone
+    type: object
+  handlers.UserCredentials:
+    properties:
+      email:
+        maxLength: 45
+        minLength: 3
+        type: string
+      password:
+        maxLength: 45
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
     type: object
 info:
   contact:
@@ -452,7 +455,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows admin retrieves all orders with given status from the database
+      summary: Allows admin retrieve all orders with given status from the database
       tags:
       - admin
   /admin/products:
@@ -460,7 +463,7 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Bearer <token>
+      - description: Authorization token format 'Bearer <token>'
         in: header
         name: Authorization
         required: true
@@ -470,7 +473,7 @@ paths:
         name: product
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewProduct'
+          $ref: '#/definitions/handlers.ProductRequest'
       produces:
       - application/json
       responses:
@@ -542,12 +545,12 @@ paths:
         name: product_id
         required: true
         type: string
-      - description: Update Product
+      - description: Request body containing the new product data
         in: body
         name: product
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewProduct'
+          $ref: '#/definitions/handlers.ProductRequest'
       produces:
       - application/json
       responses:
@@ -579,12 +582,12 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: Add service
+      - description: Data of the service to add
         in: body
         name: service
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewService'
+          $ref: '#/definitions/handlers.ServiceRequest'
       produces:
       - application/json
       responses:
@@ -656,12 +659,12 @@ paths:
         name: service_id
         required: true
         type: string
-      - description: Update service
+      - description: Data of the service to update
         in: body
         name: service
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewService'
+          $ref: '#/definitions/handlers.ServiceRequest'
       produces:
       - application/json
       responses:
@@ -688,17 +691,17 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Bearer <token>
+      - description: Authorization token format is 'Bearer <token>'
         in: header
         name: Authorization
         required: true
         type: string
-      - description: Add product
+      - description: New slot details
         in: body
         name: product
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewSlot'
+          $ref: '#/definitions/handlers.SlotDetails'
       produces:
       - application/json
       responses:
@@ -793,7 +796,7 @@ paths:
   /bookings:
     get:
       parameters:
-      - description: Bearer <token>
+      - description: Authorization token in the format 'Bearer <token>'
         in: header
         name: Authorization
         required: true
@@ -816,7 +819,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows customer retrieves all their bookings from the database
+      summary: Retrieves all their bookings from the database
       tags:
       - bookings
     post:
@@ -833,7 +836,7 @@ paths:
         name: booking
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewBooking'
+          $ref: '#/definitions/handlers.BookingRequest'
       produces:
       - application/json
       responses:
@@ -852,13 +855,13 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows customer add a new booking.
+      summary: Adds a new booking to the database for the authorized customer.
       tags:
       - bookings
   /bookings/{booking_id}:
     get:
       parameters:
-      - description: Bearer <token>
+      - description: Authorization token in the format 'Bearer <token>'
         in: header
         name: Authorization
         required: true
@@ -881,7 +884,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows customer retrieve a booking with given ID from database
+      summary: Retrieves a booking with given ID from database
       tags:
       - bookings
   /cart:
@@ -910,7 +913,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows the current user all items in their cart.
+      summary: Clears all the items in the logged in user's cart.
       tags:
       - cart
     get:
@@ -955,7 +958,7 @@ paths:
         name: item
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewItem'
+          $ref: '#/definitions/handlers.ItemRequest'
       produces:
       - application/json
       responses:
@@ -1008,13 +1011,13 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows the current user delete an item from the cart.
+      summary: Delete an item from the customer's cart.
       tags:
       - cart
   /cart/{item_id}/{quantity}:
     put:
       parameters:
-      - description: Bearer <token>
+      - description: Authorization token format 'Bearer <token>'
         in: header
         name: Authorization
         required: true
@@ -1076,7 +1079,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Allows the customer retrieve all their orders from the database.
+      summary: Retrieve all the orders from the database belonging to the customer.
       tags:
       - orders
     post:
@@ -1093,7 +1096,7 @@ paths:
         name: order
         required: true
         schema:
-          $ref: '#/definitions/handlers.NewOrder'
+          $ref: '#/definitions/handlers.OrderRequest'
       produces:
       - application/json
       responses:
@@ -1234,7 +1237,7 @@ paths:
   /products/categories/{category}:
     get:
       parameters:
-      - description: Product Category
+      - description: The category of the product to retrieve
         in: path
         name: category
         required: true
@@ -1296,12 +1299,12 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Reset password
+      - description: Data needed to reset the user's password
         in: body
         name: reset
         required: true
         schema:
-          $ref: '#/definitions/handlers.ResetPassword'
+          $ref: '#/definitions/handlers.ResetPasswordRequest'
       produces:
       - application/json
       responses:
@@ -1398,7 +1401,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/handlers.SignInUser'
+          $ref: '#/definitions/handlers.UserCredentials'
       produces:
       - application/json
       responses:
@@ -1417,7 +1420,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Logs a user into their account
+      summary: Authenticate a user and generate a JWT.
       tags:
       - signin
   /signup:
@@ -1425,12 +1428,12 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Add user account
+      - description: New user details
         in: body
         name: user
         required: true
         schema:
-          $ref: '#/definitions/handlers.SignUpUser'
+          $ref: '#/definitions/handlers.NewUserDetails'
       produces:
       - application/json
       responses:
@@ -1449,7 +1452,7 @@ paths:
           schema:
             additionalProperties: true
             type: object
-      summary: Add a new user account
+      summary: Create a new user account with the provided details
       tags:
       - signup
   /slots:
